src/pages/en/v1.4.0/sdk/methods.mdx
---
title: "JavaScript SDK - Methods"
metaTitle: "JavaScript SDK - Methods"
metaDescription: "List of public methods from the JavaScript SDK"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'



## Methods

- [Constructor](/sdk/constructor). Learn all about the initialization options for the tracker.
- [event()](/sdk/event). Send custom events to be recorded as part of your replays with this method.
- [getSessionToken()](/sdk/get-session-token). Get the currently active session's token.
- [getSessionID()](/sdk/get-session-id). Get the currently active session's ID.
- [getSessionURL()](/sdk/get-session-url). Get the url to replay the current session. 
- [handleError()](/sdk/handle-error). Capture custom error information and save it as part of your recording.
- [isActive()](/sdk/is-active). Get the current state of the active session.
- [issue()](/sdk/issue). Capture custom technical events and save them as part of the replay.
- [setUserID()](/sdk/set-user-id). Identify your users with this method.
- [setMetadata()](/sdk/set-matadata). Set a metatada field and save it as part of the recording.
- [start()](/sdk/start). Start recording a session.
- [stop()](/sdk/stop). Stop the recording of a session with this method.

