src/pages/en/v1.16.0/sdk/methods.mdx
---
title: "JavaScript SDK - Methods"
metaTitle: "JavaScript SDK - Methods"
metaDescription: "List of public methods from the JavaScript SDK"
---

## Methods

- [Constructor](/sdk/constructor): Learn all about the initialization options for the tracker.
- [event()](/sdk/event): Send custom events to be recorded as part of your replays with this method.
- [getSessionToken()](/sdk/get-session-token): Get the currently active session's token.
- [getSessionID()](/sdk/get-session-id): Get the currently active session's ID.
- [getSessionURL()](/sdk/get-session-url): Get the url to replay the current session. 
- [handleError()](/sdk/handle-error): Capture custom error information and save it as part of your recording.
- [isActive()](/sdk/is-active): Get the current state of the active session.
- [issue()](/sdk/issue): Capture custom technical events and save them as part of the replay.
- [setUserID()](/sdk/set-user-id): Identify your users with this method.
- [setMetadata()](/sdk/set-metadata): Set a metadata field and save it as part of the recording.
- [start()](/sdk/start): Start recording a session.
- [stop()](/sdk/stop): Stop the recording of a session with this method.
- [clearPersistFlag()](/sdk/clear-persist-flag): Removes persistent Feature Flags from browser's sessionStorage.
- [getFeatureFlag()](/sdk/get-feature-flag): Returns a `IFeatureFlag` by key if eixsts.
- [onFlagsReload()](/sdk/on-flags-reload): Sets the callback to use when Feature Flags are loaded.
- [isFlagEnabled()](/sdk/is-flag-enabled): Returns `true` if flag with this key does exist and is active.
- [reloadFlags()](/sdk/reloadFlags): Reloads all flags (can be useful if user session had any change of metadata, userId or any other information that could be required for certain flag conditions).
- [getAllFeatureFlags()](/sdk/get-all-feature-flags): Returns all flags (`IFeatureFlag[]`) that are active right now.
